--- a/.JS/3.Life/index.html
+++ b/.JS/3.Life/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hi
+    <canvas id="canvas">
+
+    </canvas>
+    <script src="script.js">
+
+    </script>
 </body>
 </html>
