--- a/.JS/3.Life/index.html
+++ b/.JS/3.Life/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="canvas">
-
-    </canvas>
-    <script src="script.js">
-
-    </script>
+    <canvas id="canvas"></canvas>
+    <div id="buttons">
+        <button id="play">START</button>
+        <button id="clear">CLEAR</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
