--- a/.JS/3.Life/index.html
+++ b/.JS/3.Life/index.html
@@ -12,6 +12,7 @@
     <div id="buttons">
         <button id="play">START</button>
         <button id="clear">CLEAR</button>
+        <button id="random">RANDOM</button>
     </div>
     <script src="script.js"></script>
 </body>
